refactor: Bag Of Words
Put code into transform method, used to return sparse matrix

--- a/Assignment_3_Reference_self.ipynb
+++ b/Assignment_3_Reference_self.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<?, ?it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00, 1703.96it/s]\n"
      ]
     },
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "{'abc': 2, 'def': 2, 'zzz': 2, 'pqr': 1}"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,42 +187,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset : \n"
+     ]
+    }
+   ],
    "source": [
     "strings = [\"the method of lagrange multipliers is the economists workhorse for solving optimization problems\",\n",
-    "           \"the technique is a centerpiece of economic theory but unfortunately its usually taught poorly\"]"
+    "           \"the technique is a centerpiece of economic theory but unfortunately its usually taught poorly\"]\n",
+    "print(\"Dataset : \".format(strings))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00, 2004.45it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00, 2457.84it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'but': 0, 'centerpiece': 1, 'economic': 2, 'economists': 3, 'for': 4, 'is': 5, 'its': 6, 'lagrange': 7, 'method': 8, 'multipliers': 9, 'of': 10, 'optimization': 11, 'poorly': 12, 'problems': 13, 'solving': 14, 'taught': 15, 'technique': 16, 'the': 17, 'theory': 18, 'unfortunately': 19, 'usually': 20, 'workhorse': 21}\n"
+      "Vocabulary : {'but': 0, 'centerpiece': 1, 'economic': 2, 'economists': 3, 'for': 4, 'is': 5, 'its': 6, 'lagrange': 7, 'method': 8, 'multipliers': 9, 'of': 10, 'optimization': 11, 'poorly': 12, 'problems': 13, 'solving': 14, 'taught': 15, 'technique': 16, 'the': 17, 'theory': 18, 'unfortunately': 19, 'usually': 20, 'workhorse': 21}\n"
      ]
     }
    ],
    "source": [
     "vocabulary_i = fit(strings)\n",
-    "print(vocabulary_i)"
+    "print(\"Vocabulary : {}\".format(vocabulary_i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform(dataset, vocabulary):\n",
+    "    \"\"\"\n",
+    "    Compute sparse marix given dataset and vocabulary\n",
+    "    \n",
+    "    Parameter:\n",
+    "    \n",
+    "    dataset: list()\n",
+    "        List of sentences\n",
+    "    vocabulary: dict()\n",
+    "        {word: frequency}\n",
+    "        \n",
+    "    Return: sparse_mtx\n",
+    "        2-d Matrix\n",
+    "    \"\"\"\n",
+    "    rows, cols, frequencies = list(), list(), list()\n",
+    "    sparse_mtx = \"\"\n",
+    "    if isinstance(dataset, list):\n",
+    "\n",
+    "        for idx, sentence in enumerate(dataset):\n",
+    "\n",
+    "            word_with_freq = get_unique_words_with_freq(sentence)\n",
+    "\n",
+    "            for word, frequency in word_with_freq.items():\n",
+    "\n",
+    "                if len(word) < 2:\n",
+    "                    continue\n",
+    "\n",
+    "                col_index = vocabulary.get(word, -1)\n",
+    "                if col_index != -1:\n",
+    "\n",
+    "                    rows.append(idx)\n",
+    "                    cols.append(col_index)\n",
+    "                    frequencies.append(frequency)\n",
+    "\n",
+    "        sparse_mtx = csr_matrix((frequencies, (rows,cols)), shape = (len(strings), len(vocabulary)))\n",
+    "        \n",
+    "    return sparse_mtx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -258,56 +312,9 @@
     }
    ],
    "source": [
-    "rows, cols, frequencies = list(), list(), list()\n",
-    "\n",
-    "for idx, sentence in enumerate(strings):\n",
-    "    \n",
-    "    word_with_freq = get_unique_words_with_freq(sentence)\n",
-    "    \n",
-    "    for word, frequency in word_with_freq.items():\n",
-    "        \n",
-    "        if len(word) < 2:\n",
-    "            continue\n",
-    "            \n",
-    "        col_index = vocabulary_i.get(word, -1)\n",
-    "        if col_index != -1:\n",
-    "            \n",
-    "            rows.append(idx)\n",
-    "            cols.append(vocabulary_i.get(word, -1))\n",
-    "            frequencies.append(frequency)\n",
-    "\n",
-    "sparse_mtx = csr_matrix((frequencies, (rows,cols)), shape = (len(strings), len(vocabulary_i)))\n",
-    "print(sparse_mtx)\n",
-    "#return cols, rows, elements"
+    "sparse_mtx = transform(strings, vocabulary_i)\n",
+    "print(sparse_mtx)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "[17, 8, 10, 7, 9, 5, 3, 21, 4, 14, 11, 13, 17, 16, 5, 1, 10, 2, 18, 0, 19, 6, 20, 15, 12]\n",
-      "[2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(rows)\n",
-    "print(cols)\n",
-    "print(frequencies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
