refactor: TF-IDF vectorizer
Develop code to impleemnt fir method to get feature names

--- a/Assignment_3_Instructions.ipynb
+++ b/Assignment_3_Instructions.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -250,10 +250,8 @@
        "(4, 9)"
       ]
      },
-     "execution_count": 5,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 37,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -265,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -294,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -331,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -350,7 +348,45 @@
     "import math\n",
     "import operator\n",
     "from sklearn.preprocessing import normalize\n",
-    "import numpy"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit(dataset):\n",
+    "    \n",
+    "    vocabulary = set()\n",
+    "    for sentence in dataset:\n",
+    "\n",
+    "        for word in sentence.split():\n",
+    "            \n",
+    "            vocabulary.add(word)\n",
+    "    \n",
+    "    sorted_vocab = sorted(list(vocabulary))\n",
+    "    \n",
+    "    return sorted_vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['and', 'document', 'first', 'is', 'one', 'second', 'the', 'third', 'this']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocabulary = fit(corpus)\n",
+    "print(vocabulary)"
    ]
   },
   {
