refactor: TF-IDF vectorizer
Renamed variable names

--- a/Assignment_3_Instructions.ipynb
+++ b/Assignment_3_Instructions.ipynb
@@ -1,6 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pixiedust database opened successfully\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div style=\"margin:10px\">\n",
+       "            <a href=\"https://github.com/ibm-watson-data-lab/pixiedust\" target=\"_new\">\n",
+       "                <img src=\"https://github.com/ibm-watson-data-lab/pixiedust/raw/master/docs/_static/pd_icon32.png\" style=\"float:left;margin-right:10px\"/>\n",
+       "            </a>\n",
+       "            <span>Pixiedust version 1.1.18</span>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pixiedust"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -140,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -170,13 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Np4dfQOkxLi4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mistertandon\\Anaconda3\\envs\\applied-ai\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "C:\\Users\\mistertandon\\Anaconda3\\envs\\applied-ai\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "vectorizer = TfidfVectorizer()\n",
@@ -186,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -210,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -236,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -250,7 +297,7 @@
        "(4, 9)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -292,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -329,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -353,12 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit(dataset):\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    Compute features list given corpus of documents\n",
+    "    \"\"\"\n",
     "    vocabulary = set()\n",
     "    for sentence in dataset:\n",
     "\n",
@@ -373,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -385,8 +434,75 @@
     }
    ],
    "source": [
-    "vocabulary = fit(corpus)\n",
-    "print(vocabulary)"
+    "vocab = fit(corpus)\n",
+    "print(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_word_freq_in_docs_across_corpus(corpus):\n",
+    "    \n",
+    "    # global_vocab: Contains word frquency across corpus in context to context \n",
+    "    global_vocab = dict()\n",
+    "\n",
+    "    # curr_doc_vocab: Current document vocabulary\n",
+    "    curr_doc_vocab = dict()\n",
+    "\n",
+    "    #local_vocab : Local vocabulary in context to particular document\n",
+    "    local_vocab = set()\n",
+    "\n",
+    "    for idx, sentence in enumerate(corpus):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        word_freq_icd: dict()\n",
+    "            Contains mapping of words and their frequency in context to particular document.\n",
+    "        \"\"\"\n",
+    "        word_freq_icd = dict(Counter(sentence.split()))\n",
+    "\n",
+    "        if idx == 0:\n",
+    "\n",
+    "            global_vocab = dict.fromkeys(word_freq_icd, 1)\n",
+    "            local_vocab = set(global_vocab)\n",
+    "        else:\n",
+    "            \n",
+    "            curr_doc_vocab = set(word_freq_icd)\n",
+    "            \n",
+    "            diff_set = curr_doc_vocab.difference(local_vocab)\n",
+    "            intersection_set = curr_doc_vocab.intersection(local_vocab)\n",
+    "            \n",
+    "            local_vocab.update(diff_set)\n",
+    "\n",
+    "            for key in diff_set:\n",
+    "                global_vocab.update({key:1})\n",
+    "\n",
+    "            for key in intersection_set:\n",
+    "                global_vocab[key] += 1            \n",
+    "\n",
+    "\n",
+    "    return global_vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'this': 4, 'is': 4, 'the': 4, 'first': 2, 'document': 3, 'second': 1, 'one': 1, 'third': 1, 'and': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#: word_freq_acicd : Word frequency acoross corpus in context to documents\n",
+    "word_freq_acicd = compute_word_freq_in_docs_across_corpus(corpus)\n",
+    "print(word_freq_idac)"
    ]
   },
   {
@@ -430,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -460,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
