--- a/Assignment_3_Instructions.ipynb
+++ b/Assignment_3_Instructions.ipynb
@@ -2,9 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pixiedust database opened successfully\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div style=\"margin:10px\">\n",
+       "            <a href=\"https://github.com/ibm-watson-data-lab/pixiedust\" target=\"_new\">\n",
+       "                <img src=\"https://github.com/ibm-watson-data-lab/pixiedust/raw/master/docs/_static/pd_icon32.png\" style=\"float:left;margin-right:10px\"/>\n",
+       "            </a>\n",
+       "            <span>Pixiedust version 1.1.18</span>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pixiedust"
    ]
@@ -149,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -179,13 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Np4dfQOkxLi4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mistertandon\\Anaconda3\\envs\\applied-ai\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "C:\\Users\\mistertandon\\Anaconda3\\envs\\applied-ai\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "vectorizer = TfidfVectorizer()\n",
@@ -195,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -219,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -245,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -259,7 +297,7 @@
        "(4, 9)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +310,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 8)\t0.38408524091481483\n",
+      "  (0, 6)\t0.38408524091481483\n",
+      "  (0, 3)\t0.38408524091481483\n",
+      "  (0, 2)\t0.5802858236844359\n",
+      "  (0, 1)\t0.46979138557992045\n",
+      "  (1, 8)\t0.281088674033753\n",
+      "  (1, 6)\t0.281088674033753\n",
+      "  (1, 5)\t0.5386476208856763\n",
+      "  (1, 3)\t0.281088674033753\n",
+      "  (1, 1)\t0.6876235979836938\n",
+      "  (2, 8)\t0.267103787642168\n",
+      "  (2, 7)\t0.511848512707169\n",
+      "  (2, 6)\t0.267103787642168\n",
+      "  (2, 4)\t0.511848512707169\n",
+      "  (2, 3)\t0.267103787642168\n",
+      "  (2, 0)\t0.511848512707169\n",
+      "  (3, 8)\t0.38408524091481483\n",
+      "  (3, 6)\t0.38408524091481483\n",
+      "  (3, 3)\t0.38408524091481483\n",
+      "  (3, 2)\t0.5802858236844359\n",
+      "  (3, 1)\t0.46979138557992045\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(skl_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -301,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -338,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -362,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,6 +446,7 @@
     "    Compute features list given corpus of documents\n",
     "    \"\"\"\n",
     "    vocabulary = set()\n",
+    "    final_vocab = dict()\n",
     "    for sentence in dataset:\n",
     "\n",
     "        for word in sentence.split():\n",
@@ -379,19 +455,21 @@
     "    \n",
     "    sorted_vocab = sorted(list(vocabulary))\n",
     "    \n",
-    "    return sorted_vocab"
+    "    final_vocab = {word:idx for idx, word in enumerate(sorted_vocab)}\n",
+    "    \n",
+    "    return final_vocab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['and', 'document', 'first', 'is', 'one', 'second', 'the', 'third', 'this']\n"
+      "{'and': 0, 'document': 1, 'first': 2, 'is': 3, 'one': 4, 'second': 5, 'the': 6, 'third': 7, 'this': 8}\n"
      ]
     }
    ],
@@ -402,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,30 +528,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'this': 4, 'is': 4, 'the': 4, 'first': 2, 'document': 3, 'second': 1, 'one': 1, 'third': 1, 'and': 1}\n"
+     "ename": "NameError",
+     "evalue": "name 'word_freq_idac' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-5e3723aaeba6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#: word_freq_acicd : Word frequency acoross corpus in context to documents\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mword_freq_acicd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_word_freq_in_docs_across_corpus\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcorpus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword_freq_idac\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'word_freq_idac' is not defined"
      ]
     }
    ],
    "source": [
     "#: word_freq_acicd : Word frequency acoross corpus in context to documents\n",
     "word_freq_acicd = compute_word_freq_in_docs_across_corpus(corpus)\n",
-    "print(word_freq_idac)"
+    "print(word_freq_acicd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_idf(docs_len, _word_freq_icdac):\n",
+    "def idf_formula(docs_len, _word_freq_icdac):\n",
     "    \n",
     "    idf = 1 + np.log(np.divide((1 + docs_len), (1 + _word_freq_icdac)))\n",
     "    \n",
@@ -482,38 +564,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def transform(vocab, word_freq_acicd, docs_len):\n",
-    "    \n",
-    "    _idf = list()\n",
-    "    for word in vocab:\n",
-    "        \n",
+    "def compute_idf(vocab, word_freq_acicd, docs_len):\n",
+    "\n",
+    "    _idf = dict()\n",
+    "    for word, idx in vocab.items():\n",
+    "\n",
     "        _word_freq_icdac = word_freq_acicd.get(word)\n",
-    "        \n",
-    "        temp_idf = compute_idf(docs_len, _word_freq_icdac)\n",
-    "        _idf.append(temp_idf)\n",
-    "    \n",
+    "\n",
+    "        temp_idf = idf_formula(docs_len, _word_freq_icdac)\n",
+    "        _idf.update({word: temp_idf})\n",
+    "\n",
     "    return _idf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.916290731874155, 1.2231435513142097, 1.5108256237659907, 1.0, 1.916290731874155, 1.916290731874155, 1.0, 1.916290731874155, 1.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ans = transform(vocab_i, word_freq_acicd, len(corpus))\n",
+    "idf = compute_idf(vocab_i, word_freq_acicd, len(corpus))\n",
     "print(ans)"
    ]
   },
@@ -558,22 +632,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "NHxPLlwNxLjL",
     "outputId": "9abd8e08-0e24-4975-9a13-4d3636d60323"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of documents in corpus =  746\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Below is the code to load the cleaned_strings pickle file provided\n",
     "# Here corpus is of list type\n",
@@ -588,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -623,18 +689,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
   }
  },
  "nbformat": 4,
