--- a/Assignment_3_Instructions.ipynb
+++ b/Assignment_3_Instructions.ipynb
@@ -195,6 +195,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this is the first document', 'this document is the second document', 'and this is the third one', 'is this the first document']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corpus)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -206,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -233,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -257,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -283,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -297,7 +314,7 @@
        "(4, 9)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +327,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'scipy.sparse.csr.csr_matrix'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(skl_output))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -376,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -413,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -437,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,18 +562,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'word_freq_idac' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-5e3723aaeba6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#: word_freq_acicd : Word frequency acoross corpus in context to documents\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mword_freq_acicd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_word_freq_in_docs_across_corpus\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcorpus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword_freq_idac\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'word_freq_idac' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'this': 4, 'is': 4, 'the': 4, 'first': 2, 'document': 3, 'second': 1, 'one': 1, 'and': 1, 'third': 1}\n"
      ]
     }
    ],
@@ -551,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,12 +613,248 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_word_freq_doc_wise(dataset):\n",
+    "    \n",
+    "    word_freq_icd = dict()\n",
+    "    for idx, sentence in enumerate(dataset):\n",
+    "        \n",
+    "        word_list = list()\n",
+    "        word_list = sentence.split()\n",
+    "        word_list_len = len(word_list)\n",
+    "\n",
+    "        word_freq_icd_temp = dict(Counter(word_list))\n",
+    "\n",
+    "        for word, freq in word_freq_icd_temp.items():\n",
+    "            word_freq_icd_temp[word] /= word_list_len\n",
+    "\n",
+    "        word_freq_icd.update({idx: word_freq_icd_temp})\n",
+    "        \n",
+    "    return word_freq_icd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: {'this': 0.2, 'is': 0.2, 'the': 0.2, 'first': 0.2, 'document': 0.2}, 1: {'this': 0.16666666666666666, 'document': 0.3333333333333333, 'is': 0.16666666666666666, 'the': 0.16666666666666666, 'second': 0.16666666666666666}, 2: {'and': 0.16666666666666666, 'this': 0.16666666666666666, 'is': 0.16666666666666666, 'the': 0.16666666666666666, 'third': 0.16666666666666666, 'one': 0.16666666666666666}, 3: {'is': 0.2, 'this': 0.2, 'the': 0.2, 'first': 0.2, 'document': 0.2}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# word_freq_dw: Word frequency document wise\n",
+    "word_freq_dw = compute_word_freq_doc_wise(corpus)\n",
+    "print(word_freq_dw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'and': 1.916290731874155, 'document': 1.2231435513142097, 'first': 1.5108256237659907, 'is': 1.0, 'one': 1.916290731874155, 'second': 1.916290731874155, 'the': 1.0, 'third': 1.916290731874155, 'this': 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "idf = compute_idf(vocab_i, word_freq_acicd, len(corpus))\n",
+    "print(idf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([1.916290731874155, 1.2231435513142097, 1.5108256237659907, 1.0, 1.916290731874155, 1.916290731874155, 1.0, 1.916290731874155, 1.0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(idf.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.sparse import csr_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform(dataset, vocab, word_freq_dw, idf):\n",
+    "    print(dataset)\n",
+    "    rows, cols, weighted_idf = list(), list(), list()\n",
+    "    for idx, sentence in enumerate(dataset):\n",
+    "\n",
+    "        for word in sentence.split():\n",
+    "            \n",
+    "            col_idx = vocab.get(word, -1)\n",
+    "\n",
+    "            if col_idx != -1:\n",
+    "                print(\"=\"*40)\n",
+    "                print(word_freq_dw, idx, word)\n",
+    "                print(\"$\"*40)\n",
+    "                word_freq = word_freq_dw.get(idx).get(word)\n",
+    "                _idf = idf.get(word)\n",
+    "\n",
+    "                temp_weighted_idf_val = np.multiply(word_freq, _idf)\n",
+    "                \n",
+    "                rows.append(idx)\n",
+    "                cols.append(col_idx)\n",
+    "                weighted_idf.append(temp_weighted_idf_val)\n",
+    "                \n",
+    "    sparse_mtx = csr_matrix((weighted_idf, (rows, cols)), shape = (len(corpus), len(vocab)))\n",
+    "            \n",
+    "    return sparse_mtx"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "idf = compute_idf(vocab_i, word_freq_acicd, len(corpus))\n",
-    "print(ans)"
+    "sparse_mtx = transform(corpus, vocab_i, word_freq_dw, idf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'scipy.sparse.csr.csr_matrix'>\n",
+      "  (0, 1)\t0.24462871026284194\n",
+      "  (0, 2)\t0.3021651247531982\n",
+      "  (0, 3)\t0.2\n",
+      "  (0, 6)\t0.2\n",
+      "  (0, 8)\t0.2\n",
+      "  (1, 1)\t0.8154290342094731\n",
+      "  (1, 3)\t0.16666666666666666\n",
+      "  (1, 5)\t0.3193817886456925\n",
+      "  (1, 6)\t0.16666666666666666\n",
+      "  (1, 8)\t0.16666666666666666\n",
+      "  (2, 0)\t0.3193817886456925\n",
+      "  (2, 3)\t0.16666666666666666\n",
+      "  (2, 4)\t0.3193817886456925\n",
+      "  (2, 6)\t0.16666666666666666\n",
+      "  (2, 7)\t0.3193817886456925\n",
+      "  (2, 8)\t0.16666666666666666\n",
+      "  (3, 1)\t0.24462871026284194\n",
+      "  (3, 2)\t0.3021651247531982\n",
+      "  (3, 3)\t0.2\n",
+      "  (3, 6)\t0.2\n",
+      "  (3, 8)\t0.2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(sparse_mtx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.24462871 0.30216512 0.2        0.         0.\n",
+      "  0.2        0.         0.2       ]\n",
+      " [0.         0.81542903 0.         0.16666667 0.         0.31938179\n",
+      "  0.16666667 0.         0.16666667]\n",
+      " [0.31938179 0.         0.         0.16666667 0.31938179 0.\n",
+      "  0.16666667 0.31938179 0.16666667]\n",
+      " [0.         0.24462871 0.30216512 0.2        0.         0.\n",
+      "  0.2        0.         0.2       ]]\n",
+      "[[0.         0.46979139 0.58028582 0.38408524 0.         0.\n",
+      "  0.38408524 0.         0.38408524]\n",
+      " [0.         0.88432039 0.         0.18074747 0.         0.3463647\n",
+      "  0.18074747 0.         0.18074747]\n",
+      " [0.51184851 0.         0.         0.26710379 0.51184851 0.\n",
+      "  0.26710379 0.51184851 0.26710379]\n",
+      " [0.         0.46979139 0.58028582 0.38408524 0.         0.\n",
+      "  0.38408524 0.         0.38408524]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dense_mtx_rep = np.array(sparse_mtx.toarray())\n",
+    "\n",
+    "dense_mtx_square = np.multiply(dense_mtx_rep, dense_mtx_rep)\n",
+    "dense_mtx_square_sum = np.sum(dense_mtx_square, axis = 1)\n",
+    "\n",
+    "dense_mtx_square_sum_sqrt = np.sqrt(dense_mtx_square_sum).reshape((-1, 1))\n",
+    "\n",
+    "l2_norm_mtx = np.divide(dense_mtx_rep, dense_mtx_square_sum_sqrt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 1)\t0.4697913855799205\n",
+      "  (0, 2)\t0.580285823684436\n",
+      "  (0, 3)\t0.3840852409148149\n",
+      "  (0, 6)\t0.3840852409148149\n",
+      "  (0, 8)\t0.3840852409148149\n",
+      "  (1, 1)\t0.8843203931656719\n",
+      "  (1, 3)\t0.18074746668441155\n",
+      "  (1, 5)\t0.3463646952170705\n",
+      "  (1, 6)\t0.18074746668441155\n",
+      "  (1, 8)\t0.18074746668441155\n",
+      "  (2, 0)\t0.511848512707169\n",
+      "  (2, 3)\t0.267103787642168\n",
+      "  (2, 4)\t0.511848512707169\n",
+      "  (2, 6)\t0.267103787642168\n",
+      "  (2, 7)\t0.511848512707169\n",
+      "  (2, 8)\t0.267103787642168\n",
+      "  (3, 1)\t0.4697913855799205\n",
+      "  (3, 2)\t0.580285823684436\n",
+      "  (3, 3)\t0.3840852409148149\n",
+      "  (3, 6)\t0.3840852409148149\n",
+      "  (3, 8)\t0.3840852409148149\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparse_mtx_final = csr_matrix(l2_norm_mtx)\n",
+    "print(sparse_mtx_final)"
    ]
   },
   {
@@ -689,6 +955,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
