feat: TF-IDF vectorizer
Implement max feature functioanlity in TF-IDF

--- a/Assignment_3_Instructions.ipynb
+++ b/Assignment_3_Instructions.ipynb
@@ -2,38 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 321,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pixiedust database opened successfully\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <div style=\"margin:10px\">\n",
-       "            <a href=\"https://github.com/ibm-watson-data-lab/pixiedust\" target=\"_new\">\n",
-       "                <img src=\"https://github.com/ibm-watson-data-lab/pixiedust/raw/master/docs/_static/pd_icon32.png\" style=\"float:left;margin-right:10px\"/>\n",
-       "            </a>\n",
-       "            <span>Pixiedust version 1.1.18</span>\n",
-       "        </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = 'none'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pixiedust"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def logging(is_enabled, item):\n",
+    "    \n",
+    "    if is_enabled:\n",
+    "        print(item)\n",
+    "    \n",
+    "    return True"
    ]
   },
   {
@@ -176,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 324,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -196,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -223,24 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 326,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Np4dfQOkxLi4"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mistertandon\\Anaconda3\\envs\\applied-ai\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "C:\\Users\\mistertandon\\Anaconda3\\envs\\applied-ai\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "vectorizer = TfidfVectorizer()\n",
@@ -250,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 327,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -274,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 328,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -300,25 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 329,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "-CTiWHygxLjA",
     "outputId": "8d5a9cde-2c29-4afe-f7b4-1547e88dba4f"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 9)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# shape of sklearn tfidf vectorizer output after applying transform method.\n",
     "\n",
@@ -327,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 332,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -410,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 333,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -447,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 334,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -471,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,14 +537,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'this': 4, 'is': 4, 'the': 4, 'first': 2, 'document': 3, 'second': 1, 'one': 1, 'and': 1, 'third': 1}\n"
+      "{'this': 4, 'is': 4, 'the': 4, 'first': 2, 'document': 3, 'second': 1, 'third': 1, 'and': 1, 'one': 1}\n"
      ]
     }
    ],
@@ -581,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,23 +676,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def transform(dataset, vocab, word_freq_dw, idf):\n",
-    "    print(dataset)\n",
+    "def transform(corpus, vocab, word_freq_dw, idf):\n",
+    "\n",
     "    rows, cols, weighted_idf = list(), list(), list()\n",
-    "    for idx, sentence in enumerate(dataset):\n",
+    "    for idx, sentence in enumerate(corpus):\n",
     "\n",
     "        for word in sentence.split():\n",
     "            \n",
     "            col_idx = vocab.get(word, -1)\n",
     "\n",
     "            if col_idx != -1:\n",
-    "                print(\"=\"*40)\n",
-    "                print(word_freq_dw, idx, word)\n",
-    "                print(\"$\"*40)\n",
+    "\n",
     "                word_freq = word_freq_dw.get(idx).get(word)\n",
     "                _idf = idf.get(word)\n",
     "\n",
@@ -734,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,36 +716,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'scipy.sparse.csr.csr_matrix'>\n",
-      "  (0, 1)\t0.24462871026284194\n",
-      "  (0, 2)\t0.3021651247531982\n",
-      "  (0, 3)\t0.2\n",
-      "  (0, 6)\t0.2\n",
-      "  (0, 8)\t0.2\n",
-      "  (1, 1)\t0.8154290342094731\n",
-      "  (1, 3)\t0.16666666666666666\n",
-      "  (1, 5)\t0.3193817886456925\n",
-      "  (1, 6)\t0.16666666666666666\n",
-      "  (1, 8)\t0.16666666666666666\n",
-      "  (2, 0)\t0.3193817886456925\n",
-      "  (2, 3)\t0.16666666666666666\n",
-      "  (2, 4)\t0.3193817886456925\n",
-      "  (2, 6)\t0.16666666666666666\n",
-      "  (2, 7)\t0.3193817886456925\n",
-      "  (2, 8)\t0.16666666666666666\n",
-      "  (3, 1)\t0.24462871026284194\n",
-      "  (3, 2)\t0.3021651247531982\n",
-      "  (3, 3)\t0.2\n",
-      "  (3, 6)\t0.2\n",
-      "  (3, 8)\t0.2\n",
-      "\n"
+      "<class 'scipy.sparse.csr.csr_matrix'>\n"
      ]
     }
    ],
@@ -782,32 +733,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 349,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.         0.24462871 0.30216512 0.2        0.         0.\n",
-      "  0.2        0.         0.2       ]\n",
-      " [0.         0.81542903 0.         0.16666667 0.         0.31938179\n",
-      "  0.16666667 0.         0.16666667]\n",
-      " [0.31938179 0.         0.         0.16666667 0.31938179 0.\n",
-      "  0.16666667 0.31938179 0.16666667]\n",
-      " [0.         0.24462871 0.30216512 0.2        0.         0.\n",
-      "  0.2        0.         0.2       ]]\n",
-      "[[0.         0.46979139 0.58028582 0.38408524 0.         0.\n",
-      "  0.38408524 0.         0.38408524]\n",
-      " [0.         0.88432039 0.         0.18074747 0.         0.3463647\n",
-      "  0.18074747 0.         0.18074747]\n",
-      " [0.51184851 0.         0.         0.26710379 0.51184851 0.\n",
-      "  0.26710379 0.51184851 0.26710379]\n",
-      " [0.         0.46979139 0.58028582 0.38408524 0.         0.\n",
-      "  0.38408524 0.         0.38408524]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dense_mtx_rep = np.array(sparse_mtx.toarray())\n",
     "\n",
@@ -821,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 351,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -909,40 +837,272 @@
    "source": [
     "# Below is the code to load the cleaned_strings pickle file provided\n",
     "# Here corpus is of list type\n",
-    "\n",
+    "\"\"\"\n",
     "import pickle\n",
     "with open('cleaned_strings', 'rb') as f:\n",
-    "    corpus = pickle.load(f)\n",
+    "    corpus_ii = pickle.load(f)\n",
     "    \n",
     "# printing the length of the corpus loaded\n",
-    "print(\"Number of documents in corpus = \",len(corpus))"
+    "print(\"Number of documents in corpus = \",len(corpus_ii))\n",
+    "\"\"\"\n",
+    "corpus_ii = [\n",
+    "     'this is the first document',\n",
+    "     'this document is the second document',\n",
+    "     'and this is the third one',\n",
+    "     'is this the first document',\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_ii = np.array(corpus_ii)\n",
+    "logging(False, corpus_ii.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ZULfoOIdxLjQ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'and': 0, 'document': 1, 'first': 2, 'is': 3, 'one': 4, 'second': 5, 'the': 6, 'third': 7, 'this': 8}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here.\n",
-    "# Try not to hardcode any values.\n",
-    "# Make sure its well documented and readble with appropriate comments."
+    "vocab_ii = fit(corpus_ii)\n",
+    "logging(True, vocab_ii)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 354,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "1_DJnnR3xLjR"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'this': 4, 'is': 4, 'the': 4, 'first': 2, 'document': 3, 'second': 1, 'third': 1, 'and': 1, 'one': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#: word_freq_acicd : Word frequency acoross corpus in context to documents\n",
+    "word_freq_acicd_ii = compute_word_freq_in_docs_across_corpus(corpus_ii)\n",
+    "logging(True, word_freq_acicd_ii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: {'this': 0.2, 'is': 0.2, 'the': 0.2, 'first': 0.2, 'document': 0.2}, 1: {'this': 0.16666666666666666, 'document': 0.3333333333333333, 'is': 0.16666666666666666, 'the': 0.16666666666666666, 'second': 0.16666666666666666}, 2: {'and': 0.16666666666666666, 'this': 0.16666666666666666, 'is': 0.16666666666666666, 'the': 0.16666666666666666, 'third': 0.16666666666666666, 'one': 0.16666666666666666}, 3: {'is': 0.2, 'this': 0.2, 'the': 0.2, 'first': 0.2, 'document': 0.2}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# word_freq_dw: Word frequency document wise\n",
+    "word_freq_dw_ii = compute_word_freq_doc_wise(corpus_ii)\n",
+    "logging(True, word_freq_dw_ii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'and': 1.916290731874155, 'document': 1.2231435513142097, 'first': 1.5108256237659907, 'is': 1.0, 'one': 1.916290731874155, 'second': 1.916290731874155, 'the': 1.0, 'third': 1.916290731874155, 'this': 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "idf_ii = compute_idf(vocab_ii, word_freq_acicd_ii, len(corpus_ii))\n",
+    "logging(True, idf_ii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_idf_ii = sorted(idf_ii.items(), key = lambda x: x[1])\n",
+    "logging(True, type(sorted_idf_ii))\n",
+    "logging(False, sorted_idf_ii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def top_k_records(items, n = -1):\n",
+    "    \n",
+    "    sorted_items = sorted(items, key = lambda x: x[1])\n",
+    "    \n",
+    "    if n > 0:\n",
+    "        sorted_items = sorted_items[:n]\n",
+    "    \n",
+    "    return sorted_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_feature_fit(top_k_features):\n",
+    "    \n",
+    "    sorted_top_k_idf_list = sorted(top_k_features, key = lambda x: x[0], reverse = False)\n",
+    "    \n",
+    "    top_k_idf_dict = {_word:_idf for _word, _idf in sorted_top_k_idf_list}\n",
+    "    \n",
+    "    top_k_vocab = {item:idx for idx, item in enumerate(top_k_idf_dict)}\n",
+    "    \n",
+    "    return top_k_idf_dict, top_k_vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 381,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('is', 1.0), ('the', 1.0), ('this', 1.0), ('document', 1.2231435513142097), ('first', 1.5108256237659907)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_k_idf_list = top_k_records(idf_ii.items(), 5)\n",
+    "logging(True, top_k_idf_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'document': 1.2231435513142097, 'first': 1.5108256237659907, 'is': 1.0, 'the': 1.0, 'this': 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_k_idf_dict, top_k_vocab = max_feature_fit(top_k_idf_list)\n",
+    "logging(True, top_k_idf_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "top_k_vocab = {item:idx for idx, item in enumerate(top_k_idf_dict)}\n",
+    "logging(True, top_k_vocab)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparse_mtx = transform(corpus_ii, top_k_vocab, word_freq_dw_ii, top_k_idf_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dense_mtx_rep = np.array(sparse_mtx.toarray())\n",
+    "\n",
+    "dense_mtx_square = np.multiply(dense_mtx_rep, dense_mtx_rep)\n",
+    "dense_mtx_square_sum = np.sum(dense_mtx_square, axis = 1)\n",
+    "\n",
+    "dense_mtx_square_sum_sqrt = np.sqrt(dense_mtx_square_sum).reshape((-1, 1))\n",
+    "\n",
+    "l2_norm_mtx = np.divide(dense_mtx_rep, dense_mtx_square_sum_sqrt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 0)\t0.4697913855799205\n",
+      "  (0, 1)\t0.580285823684436\n",
+      "  (0, 2)\t0.3840852409148149\n",
+      "  (0, 3)\t0.3840852409148149\n",
+      "  (0, 4)\t0.3840852409148149\n",
+      "  (1, 0)\t0.9426718361424402\n",
+      "  (1, 2)\t0.19267399871617358\n",
+      "  (1, 3)\t0.19267399871617358\n",
+      "  (1, 4)\t0.19267399871617358\n",
+      "  (2, 2)\t0.5773502691896257\n",
+      "  (2, 3)\t0.5773502691896257\n",
+      "  (2, 4)\t0.5773502691896257\n",
+      "  (3, 0)\t0.4697913855799205\n",
+      "  (3, 1)\t0.580285823684436\n",
+      "  (3, 2)\t0.3840852409148149\n",
+      "  (3, 3)\t0.3840852409148149\n",
+      "  (3, 4)\t0.3840852409148149\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparse_mtx_final = csr_matrix(l2_norm_mtx)\n",
+    "logging(True, sparse_mtx_final)"
+   ]
   }
  ],
  "metadata": {
